fix(ui): added padding bottom in MovieList & ShowList to avoid overflow

--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+/* index.css or globals.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;    /* Firefox */
+}
